--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "ky": "^1.7.5",
     "lucide-react": "^0.487.0",
+    "mongodb": "^6.16.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
